# MCPoly

./: MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: autoformat.yml  black.yml
MCPoly/: __init__.py
MCPoly/lmpset/: __init__.py  mould.py
MCPoly/moldraw/: C_selection.py  __init__.py  bind_selection.py  molecule.py  sub_selection.py
MCPoly/orcaset/: XYZtoINP.py  __init__.py  gui.py  mgui.py  multiorca.py  orca.py  ssgui.py  ssorca.py  view3dchoose.py
MCPoly/sscurve/: YModulus.py  __init__.py  gui.py  multiple.py  single.py
MCPoly/status/: __init__.py  echart.py  gui.py  status.py
MCPoly/version/: version.py
MCPoly/view3d/: view3d.py
MCPoly/vis/: vis.py
code/: Atom1.inp  Atom2.SHARKINP.tmp  Atom2.engrad  Atom2.gbw  Atom2.ginp.tmp  Atom2.gu.tmp  Atom2.hess  Atom2.inp  Atom2.int.tmp  Atom2.opt  Atom2.out  Atom2_property.txt  PDMS_Result.txt  SI3_0.0.inp  SI3_0.5.xyz  SI3_1.0.xyz  SI3_1.5.xyz  SI3_2.0.xyz  SI3_2.5.xyz  SI3_3.0.xyz  SI3_Result.txt  file1.csv  test.ipynb
code/MCPoly/: __init__.py
code/MCPoly/lmpset/: mould.py
code/MCPoly/moldraw/: molecule.py
code/MCPoly/orcaset/: XYZtoINP.py  __init__.py  multiorca.py  ssorca.py
code/MCPoly/sscurve/: YModulus.py  __init__.py  gui.py  multiple.py  single.py
code/tests/: conftest.py  test_sscurve.py  test_status.py
orcaset/: orca.py  ssgui.py
sscurve/: gui.py  multiple.py
tests/: __init__.py  conftest.py  test_lmpset.py  test_moldraw.py  test_orcaset.py  test_sscurve.py  test_status.py
tests/data_moldraw/: Bu_Conformer.mol
(+12 files in other folders)
