[project]
name = "MCPoly"
version = "0.0.3"
authors = [
  { name="Omicron Fluor", email="cxs454@student.bham.ac.uk" },
]
description = "A computational chemistry assistant package for Python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Omicron-Fluor/MCPoly/"

[tool.black]
verbose = true
required-version = 23

[tool.isort]
profile = "black"
